# 3d-methods-cpp

./: .gitignore  CMakeLists.txt  README.md
src/3dMethods/: CMakeLists.txt  pca.h
test/: 3dMethods.cpp  CMakeLists.txt
